# whisper-cpp-plus-rs

./: .gitignore  .gitmodules  CACHING_GUIDE.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  real-audio-test-summary.md  whisper-cpp-rust-wrapper.md  whisper-wrapper-context.md
archive-docs/: linking-fix-complete.md  phase2-debugging-summary.md  session-handoff.md
docs/: ARCHITECTURE.md  CACHING_GUIDE.md  MIGRATION_NOTES.md  TECHNICAL_REFERENCE.md
examples/: basic.rs  streaming.rs  streaming_reuse_demo.rs
tests/: integration.rs
whisper-cpp-plus/: Cargo.toml  README.md
whisper-cpp-plus-sys/: Cargo.toml  README.md  build.rs
whisper-cpp-plus-sys/src/: lib.rs  quantize_wrapper.cpp
whisper-cpp-plus/benches/: enhanced_fallback_bench.rs  enhanced_vad_bench.rs  transcription.rs
whisper-cpp-plus/examples/: async_transcribe.rs  basic.rs  compare_vad.rs  enhanced_vad.rs  minimal.rs  streaming.rs  streaming_reuse_demo.rs  temperature_fallback.rs
whisper-cpp-plus/src/: async_api.rs  buffer.rs  context.rs  error.rs  lib.rs  params.rs  quantize.rs  state.rs  stream.rs  stream_pcm.rs  vad.rs
whisper-cpp-plus/src/enhanced/: fallback.rs  mod.rs  vad.rs
whisper-cpp-plus/tests/: enhanced_integration.rs  integration.rs  quantization.rs  real_audio.rs  stream_pcm_integration.rs  type_safety.rs  vad_integration.rs
whisper-cpp-plus/tests/common/: mod.rs
whisper-cpp-rs/: Cargo.toml  README.md
whisper-cpp-rs/benches/: enhanced_fallback_bench.rs  enhanced_vad_bench.rs
whisper-cpp-rs/examples/: async_transcribe.rs  basic.rs  compare_vad.rs  enhanced_vad.rs  minimal.rs  streaming.rs  temperature_fallback.rs
whisper-cpp-rs/src/: context.rs  lib.rs  params.rs  state.rs  stream.rs  stream_pcm.rs  vad.rs
whisper-cpp-rs/src/enhanced/: fallback.rs  mod.rs  vad.rs
whisper-cpp-rs/tests/: enhanced_integration.rs  integration.rs  real_audio.rs  stream_pcm_integration.rs  vad_integration.rs
whisper-cpp-rs/tests/common/: mod.rs
whisper-quantize/: Cargo.toml  README.md
whisper-quantize/src/: lib.rs
whisper-sys/: README.md  build.rs
whisper-sys/src/: backend_stubs.cpp
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
