[workspace]
members = ["whisper-cpp-plus-sys", "whisper-cpp-plus", "whisper-quantize", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
authors = ["Ross Morse"]
license = "MIT"
repository = "https://github.com/Code-Amp/whisper-cpp-plus"
keywords = ["whisper", "speech", "transcription", "asr", "speech-to-text"]
categories = ["multimedia::audio", "api-bindings", "science::robotics"]

[workspace.dependencies]
thiserror = "1.0"
num_cpus = "1.16"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1