# Pinned to whisper.cpp v1.8.3 (fork: rmorse/whisper.cpp, branch: stream-pcm)
[workspace]
members = ["whisper-cpp-plus-sys", "whisper-cpp-plus", "xtask"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.70.0"
authors = ["Ross Morsali"]
license = "MIT"
repository = "https://github.com/getpinch/whisper-cpp-plus-rs"
keywords = ["whisper", "speech", "transcription", "streaming", "speech-to-text"]
categories = ["multimedia::audio", "api-bindings", "science::robotics"]

[workspace.dependencies]
thiserror = "1.0"
num_cpus = "1.16"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 1