[package]
name = "whisper-cpp-plus-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level FFI bindings for whisper.cpp"
readme = "README.md"

[dependencies]

[build-dependencies]
cc = "1.0"
bindgen = "0.69"

[features]
default = []
quantization = []
cuda = []
metal = []
openblas = []

[package.metadata.docs.rs]
no-default-features = true