[package]
name = "whisper-cpp-plus-sys"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Low-level FFI bindings for whisper.cpp"
readme = "README.md"
exclude = ["whisper.cpp"]

[dependencies]

[build-dependencies]
cc = "1.0"
cmake = "0.1"
bindgen = "0.69"
ureq = { version = "2.9", default-features = false, features = ["tls"] }
flate2 = "1.0"
tar = "0.4"

[features]
default = []
quantization = []
cuda = []
metal = []
openblas = []

[package.metadata.docs.rs]
no-default-features = true