[package]
name = "whisper-quantize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model quantization utilities for whisper-cpp-rs"
keywords = ["whisper", "quantization", "compression", "ml", "optimization"]
categories = ["science", "compression"]
publish = false

[dependencies]
whisper-sys = { path = "../whisper-sys", features = ["quantization"] }
thiserror = "1.0"

[dev-dependencies]
# No dependencies needed for tests yet
