[package]
name = "whisper-quantize"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model quantization utilities for whisper-cpp-plus"
keywords = ["whisper", "quantization", "compression", "ml", "optimization"]
categories = ["science", "compression"]
readme = "README.md"
publish = false

[dependencies]
whisper-cpp-plus-sys = { path = "../whisper-cpp-plus-sys", features = ["quantization"] }
thiserror = "1.0"

[dev-dependencies]
# No dependencies needed for tests yet
